<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainMenuActivity">

    <TextView
        android:id="@+id/lblWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        android:gravity="center_horizontal"
        android:text="@string/Welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style = "@style/TextView"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="192dp"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblWelcome">

        <Button
            android:id="@+id/btnWeather"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:text="@string/goWeather" />

        <Button
            android:id="@+id/btnTicTacToe"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center|fill"
            android:text="@string/goTicTacToe" />

        <Button
            android:id="@+id/btnInfo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="center|fill"
            android:text="@string/goInfo" />

        <Button
            android:id="@+id/btnSong"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center|fill"
            android:text="@string/goMusic" />

        <Button
            android:id="@+id/btnTakePic"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="center|fill"
            android:text="@string/goTakePic" />

        <Button
            android:id="@+id/btnDraw"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:text="@string/goDraw" />
    </GridLayout>

</android.widget.RelativeLayout>
