<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">


    <TextView
        android:id="@+id/tempChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/tempChoose"
        android:textColor="#0B0909"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/tempGroup"
        android:layout_width="219dp"
        android:layout_height="99dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputTemp">

        <RadioButton
            android:id="@+id/rdoDegF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DegF"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdoDegC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DegC"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdoDegK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DegK"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/convert"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempGroup" />

    <TextView
        android:id="@+id/lblTemp"
        android:layout_width="328dp"
        android:layout_height="59dp"
        android:text="@string/Temp"
        android:textColor="#0B0000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempChoose" />

    <EditText
        android:id="@+id/txtInputTemp"
        android:layout_width="138dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTemp"
        android:autofillHints=""
        android:inputType="number" />

    <TextView
        android:id="@+id/lblOutputC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#56DEEF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblOutputF" />

    <TextView
        android:id="@+id/lblOutputF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#56DEEF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvert" />

    <TextView
        android:id="@+id/lblOutputK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#56DEEF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblOutputC" />

    <TextView
        android:id="@+id/lblOutput"
        android:layout_width="192dp"
        android:layout_height="47dp"
        android:layout_marginTop="56dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblOutputK" />

</androidx.constraintlayout.widget.ConstraintLayout>
